[gd_scene load_steps=18 format=3 uid="uid://1ksdrvtpnpbe"]

[ext_resource type="Texture2D" uid="uid://dec6v8r38cvgx" path="res://graphic/fon-transformed.png" id="1_h8u0d"]
[ext_resource type="Script" path="res://scenes/game.gd" id="1_hmycs"]
[ext_resource type="PackedScene" uid="uid://d264s41esikp0" path="res://scenes/girl1.tscn" id="2_ilu7j"]
[ext_resource type="PackedScene" uid="uid://ba6vogsq7lnjv" path="res://scenes/girl2.tscn" id="3_tqj1d"]
[ext_resource type="PackedScene" uid="uid://ctirycwfoabmm" path="res://scenes/girl3.tscn" id="4_ah2t8"]
[ext_resource type="PackedScene" uid="uid://cuefxsu7x3e27" path="res://scenes/man1.tscn" id="5_sejr5"]
[ext_resource type="PackedScene" uid="uid://doh0do0r5u2hi" path="res://scenes/man2.tscn" id="6_yfum1"]
[ext_resource type="PackedScene" uid="uid://ck15at3dwdlwo" path="res://scenes/man3.tscn" id="7_tj7ek"]
[ext_resource type="PackedScene" uid="uid://dtwsqcnjf6hmw" path="res://scenes/plot.tscn" id="8_gqg87"]
[ext_resource type="PackedScene" uid="uid://dvkphlkhknlhx" path="res://scenes/pause_menu.tscn" id="10_jmies"]
[ext_resource type="Texture2D" uid="uid://d1k7wiakbss6f" path="res://graphic/3671828_pause_solid_icon.png" id="11_ms517"]
[ext_resource type="PackedScene" uid="uid://cm8f03oa6raet" path="res://scenes/lose.tscn" id="12_nyk6h"]
[ext_resource type="PackedScene" uid="uid://csbkka1gdnyrs" path="res://scenes/win.tscn" id="13_k8g25"]
[ext_resource type="AudioStream" uid="uid://bq2uirjhr7a58" path="res://audio/scream.mp3" id="14_set4y"]
[ext_resource type="AudioStream" uid="uid://b00odkbfnp1qq" path="res://audio/win.wav" id="15_ddxsl"]
[ext_resource type="AudioStream" uid="uid://br263bb18n1xd" path="res://audio/548430__indian_gamer2005__piano-crash-sound.mp3" id="16_sri8f"]
[ext_resource type="AudioStream" uid="uid://flfv0kjc413k" path="res://audio/river.mp3" id="17_gx4sg"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_hmycs")

[node name="Fon-transformed" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_h8u0d")

[node name="Plot" parent="." instance=ExtResource("8_gqg87")]
position = Vector2(1123, 871)

[node name="Girl1" parent="." instance=ExtResource("2_ilu7j")]
position = Vector2(191, 834)

[node name="Girl2" parent="." instance=ExtResource("3_tqj1d")]
position = Vector2(484, 841)

[node name="Girl3" parent="." instance=ExtResource("4_ah2t8")]
position = Vector2(782, 846)

[node name="Man1" parent="." instance=ExtResource("5_sejr5")]
position = Vector2(75, 832)

[node name="Man2" parent="." instance=ExtResource("6_yfum1")]
position = Vector2(344, 835)

[node name="Man3" parent="." instance=ExtResource("7_tj7ek")]
position = Vector2(624, 833)

[node name="PauseMenu" parent="." instance=ExtResource("10_jmies")]
offset_left = 712.0
offset_top = 336.0
offset_right = 712.0
offset_bottom = 336.0
scale = Vector2(4, 4)

[node name="TextureButton" type="TextureButton" parent="."]
offset_left = 1790.0
offset_top = 7.0
offset_right = 1918.0
offset_bottom = 135.0
texture_normal = ExtResource("11_ms517")

[node name="Lose" parent="." instance=ExtResource("12_nyk6h")]

[node name="Win" parent="." instance=ExtResource("13_k8g25")]

[node name="Scream" type="AudioStreamPlayer" parent="."]
stream = ExtResource("14_set4y")

[node name="Win2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_ddxsl")

[node name="Lose2" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_sri8f")

[node name="River" type="AudioStreamPlayer" parent="."]
stream = ExtResource("17_gx4sg")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
